- DONE upravit graph model tak, ze label nie je property vrcholu, staci ak je id vrcholu
- DONE upravit graph model tak, ze rx, ry nie je property vrcholu, ak to treba, nech to je sucastou gui modelu
- DONE remove _branch_position, da sa nahradit hladanim v zozname vrcholov
- DONE odstranit right-click-drag, je to na presuvanie hran medzi vrcholmi
- DONE pouzit tagging pre canvas and find_withtag("current") pre najdenie focused canvas
- DONE remove vertex_by_canvas from GUI
- DONE scrolovatelne okno
- DONE zobrazenie tree pre commit
    - DONE ked sa nahra commit do modelu, automaticky sa nahra tree object + linka nan 
    - DONE podla nblob vrcholy sa zneviditelnia a zviditelnia sa len tie ktory su v path
        - DONE model.apply_filter
    - DONE v model.add_edge sa skontroluje ci  filter je zapnut, ak ano, vrchol sa zneviditelni, ak nie je v ceste
    - DONE v menu je polozka reset filter ktory ho zrusi a prekresli model
    - DONE ulozit filter do subor ako sucast modelu
- DONE vybrat v diagrame tree a kontext menu umozni jeho skrytie aj s children. 
- DONE maintain MRU files
- DONE keep track of usastavenia view flagu sa tree objects aj zobrazia v render_model
    - DONE tree object maju context menu show tree ktory nahra cely strom objektov
- DONE ulozit diagram do suboru a nahrat ho zo suboru, spolu s global config
- DONE vybrat z menu git adresar na spracovanie
- DONE vybrat v diagrame blob a potom vsetky tree/blobs ktore nie su v path sa skryju
    - DONE right click na blob zapamata sa cesta k blobu
    - DONE vsetky tree/er actions, print them at the end of session
- DONE refresh diagramu z repo directory
    - get fresh branches from repo,
    - delete links branch->commit, will be updated in load_branches
    - add if any is missing in model, 
    - delete from model if any is extra
- DONE filter v status bar sa zobrazi cervene
- DONE pri pokuse o ulozenie suboru ak subor neexistuje, zobrazi dialog na zadanie nazvu suboru
- DONE pridane tags